dataclients/kubernetes/testdata/ingressV1/annotation-predicates/annotation-predicates.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp1
  namespace: default
  annotations:
    zalando.org/zone: "zone1"
spec:
  rules:
  - host: zone1.test
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 8080
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp2
  namespace: default
  annotations:
    zalando.org/zone: "unknown"
spec:
  rules:
  - host: zone2.test
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 8080
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp3
  namespace: default
  annotations:
    zalando.org/zone: "zone3"
spec:
  rules:
  - host: zone3.test
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 8080
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp4
  namespace: default
  annotations:
    zalando.org/zone: "zone4"
    zalando.org/skipper-predicate: Foo("xyz")
spec:
  rules:
  - host: zone4.test
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 8080
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp5
  namespace: default
  annotations:
    zalando.org/zone: "zone5"
    zalando.org/skipper-routes: |
      r1: Path("/zone5") -> "https://zone5.route.test";
spec:
  rules:
  - host: zone5.test
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 8080
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp6
  namespace: default
  annotations:
    zalando.org/zone: "zone6"
    zalando.org/skipper-routes: |
      r1: Path("/zone6") -> "https://zone6.route.test";
spec:
  rules:
  - host: zone6.rule1.test
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: zone6.rule2.test
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 8080
        pathType: ImplementationSpecific
---
apiVersion: v1
kind: Service
metadata:
  labels:
    application: myapp
  name: myapp
spec:
  clusterIP: 10.3.190.97
  ports:
  - name: foo
    port: 8080
    protocol: TCP
    targetPort: web
  - name: web
    port: 80
    protocol: TCP
    targetPort: foo
  selector:
    application: myapp
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    application: myapp
  name: myapp
subsets:
- addresses:
  - ip: 10.2.9.103
  - ip: 10.2.9.104
  ports:
  - name: foo
    port: 8080
    protocol: TCP
